<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lbtxtamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:gravity="right"
            android:text="@string/amount_prompt"
            android:textColor="@color/default_forebground"
            android:textSize="@dimen/font_size"
            />

        <TextView
            android:id="@+id/lbamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="@color/default_forebground"
            android:textSize="@dimen/font_size"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lbtxtdiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/discount_prompt"
            android:textColor="@color/default_forebground"
            android:textSize="@dimen/font_size"
            />

        <TextView
            android:id="@+id/lbdiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="@color/default_forebground"
            android:textSize="@dimen/font_size"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lbtxtcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/code_prompt"
            android:textColor="@color/default_forebground"
            android:textSize="@dimen/font_size"
            />

        <TextView
            android:id="@+id/lbcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="@color/default_forebground"
            android:textSize="@dimen/font_size"/>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_span="2"

            android:background="@color/divider_background"
            />

    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lbtxtdiscountmoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/discount_money_prompt"
            android:textColor="@color/default_forebground"
            android:textSize="@dimen/font_size"
            />

        <TextView
            android:id="@+id/lbdiscountmoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="@color/result_forground"
            android:textSize="@dimen/font_size"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lbtxtpayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/total_payments_prompt"
            android:textColor="@color/default_forebground"
            android:textSize="@dimen/font_size"
            />

        <TextView
            android:id="@+id/lbpayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="@color/result_forground"
            android:textSize="@dimen/font_size"/>
    </TableRow>
</TableLayout>